# asset-manager-dashboard

./: .gitignore
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/endpoints/: assets.py
backend/app/core/: database.py
backend/app/models/: asset.py
backend/app/services/: asset_service.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: MainPanel.tsx  RightPanel.tsx  Sidebar.tsx
frontend/src/components/ui/: button.tsx  card.tsx
plan/: PRD.md  development_plan.md  task.md
